# Fishbones

./: .gitignore  .npmrc  Makefile  PLAN.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: desktop-build.yml
api/: Cargo.toml
api/src/: main.rs  state.rs  sync_bus.rs
docs/: catalog-deployment.md  cover-art-style.md  cover-prompts.md  openbook-ingest-tracker.md  verify-course-design.md
ingest/: README.md  cli.ts  package-lock.json  package.json  pdf-parser.ts
scripts/: build-learning-zig.mjs  build-updater-manifest.mjs  bulk-generate-challenges.mjs  bulk-generate-evm-lessons.mjs  convert-zig-lessons-to-native-test.mjs  course-tiers.mjs  extract-starter-courses.mjs  fix-challenges-zig-v2.mjs  fix-challenges-zig.mjs  generate-language-challenge-packs.mjs  generate-puzzles.mjs  mark-bundled-unreviewed.mjs  markdown-to-pdf.mjs  merge-micropuzzle-sidecars.mjs  promote-library-to-bundle.mjs  rebuild-challenges-zig-from-orig.mjs  regenerate-weak-challenges.mjs  reset-local-library.mjs  run-zig-lesson.mjs  set-release-statuses.mjs  setup-e2e-toolchains.sh  smoke-bitcoin-runtime.mjs  split-docs.mjs  split-monaco-themes.mjs  split-playground-templates.mjs  split-trees.mjs  svm-smoke.mjs  vendor-soljson.mjs  verify-evm-lessons.mjs  verify-mastering-bitcoin.mjs
src/: App.css  App.tsx  lessonHelpers.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
tests/svm-runtime/programs/counter/: Cargo.toml
tests/svm-runtime/programs/counter/src/: lib.rs
(+419 files in other folders)
